--- a/.github/workflows/after_testing.yml
+++ b/.github/workflows/after_testing.yml
@@ -12,5 +12,8 @@ jobs:
       github.event.workflow_run.event == 'push'
     runs-on: ubuntu-latest
     steps:
+      - name: "checking vars"
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/releases/}"
+
       - name: running some deploy release
         run: echo "running some deploy release"
