--- a/.github/workflows/after_testing.yml
+++ b/.github/workflows/after_testing.yml
@@ -36,8 +36,8 @@ jobs:
       - name: retrieving release_version
         run: |
           TAG=$(jq -r '.workflow_run.head_branch' "$GITHUB_EVENT_PATH")
-          echo "tag=$TAG" >> "$GITHUB_OUTPUT"
-          echo "version=${TAG#releases/}" >> "$GITHUB_OUTPUT"
+          echo "tag=$TAG"
+          echo "version=${TAG#releases/}"
 
       - name: Use the release tag name
         run: echo "The release number is ${{ github.event.release.tag_name }}"
