--- a/.github/workflows/after_testing.yml
+++ b/.github/workflows/after_testing.yml
@@ -1,16 +1,18 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows: ["Tests"]
-    types: [completed]
+  push:
+    tags:
+      - 'releases/*.*.*'
 
 jobs:
+
+  testing:
+    uses: ./github/workflows/testing.yml
+
   release:
-    if: >
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.event == 'push'
     runs-on: ubuntu-latest
+    needs: testing
     steps:
       - name: "checking vars 1"
         run: echo "${GITHUB_REF}"
