--- a/.github/workflows/after_testing.yml
+++ b/.github/workflows/after_testing.yml
@@ -8,7 +8,7 @@ on:
 jobs:
 
   testing:
-    uses: ./github/workflows/testing.yml
+    uses: ./.github/workflows/testing.yml
 
   release:
     runs-on: ubuntu-latest
